WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106749
[EFL] Unreviewed build fix after
r139541
https://bugs.webkit.org/show_bug.cgi?id=106749
Summary
[EFL] Unreviewed build fix after r139541
KwangYong Choi
Reported
2013-01-13 18:01:07 PST
../../../lib/libewebkit.so.0.1.0: undefined reference to `JSC::JSCell::methodTable() const' Added missing #include "Operations.h"
Attachments
Patch
(1.39 KB, patch)
2013-01-13 18:03 PST
,
KwangYong Choi
no flags
Details
Formatted Diff
Diff
Patch
(1.32 KB, patch)
2013-01-13 18:20 PST
,
KwangYong Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
KwangYong Choi
Comment 1
2013-01-13 18:03:53 PST
Created
attachment 182497
[details]
Patch
KwangYong Choi
Comment 2
2013-01-13 18:20:33 PST
Created
attachment 182498
[details]
Patch
Ryuan Choi
Comment 3
2013-01-13 20:20:40 PST
Comment on
attachment 182498
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=182498&action=review
> Source/WebKit/efl/ChangeLog:6 > + undefined reference to `JSC::JSCell::methodTable() const'
You may have to mention Unreviewed build fix here.
Ryuan Choi
Comment 4
2013-01-13 20:25:05 PST
Committed
r139581
: <
http://trac.webkit.org/changeset/139581
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug