[EFL] Unreviewed build fix after r139541 https://bugs.webkit.org/show_bug.cgi?id=106749

undefined reference to `JSC::JSCell::methodTable() const'

Patch by KwangYong Choi <ky0.choi@samsung.com> on 2013-01-13

* ewk/ewk_js.cpp:
* ewk/ewk_view.cpp:

Canonical link: https://commits.webkit.org/124990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139581 268f45cc-cd09-0410-ab3c-d52691b4dbfc