Source/WebKit/efl/ewk/ewk_js.cpp
@@ -25,6 +25,7 @@
 #if ENABLE(NETSCAPE_PLUGIN_API)
 
 #include "NP_jsobject.h"
+#include "Operations.h"
 #include "ewk_js_private.h"
 #include "ewk_private.h"
 #include "npruntime.h"
